--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 AddHandler cgi-script .rb
-Options -MultiViews
 RewriteEngine on
-RewriteRule ^blocket(/.+)$ atomic_block.rb [QSA]
+RewriteRule ^blocket.atom(/.+)$ atomic_block.rb
