--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 AddHandler cgi-script .rb
 RewriteEngine on
-RewriteRule ^blocket.atom(/.+)$ atomic_block.rb
+RewriteRule ^blocket.atom(/.+)$ blocket.rb
